manifests/joplin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joplin-server
  namespace: joplin
  labels:
    app: joplin-server
spec:
  type: ClusterIP
  selector:
    app: joplin-server
  ports:
  - name: http
    port: 22300
    targetPort: 22300
    protocol: TCP
