manifests/joplin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joplin-ingress
  namespace: joplin
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - joplin.racktocloud.com
    secretName: joplin-tls
  rules:
  - host: joplin.racktocloud.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: joplin-server
            port:
              number: 22300
